k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8scontrol
  namespace: k8s-control
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: kc.mipllab.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k8scontrol-frontend
              port:
                number: 3000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: k8scontrol-backend
              port:
                number: 8080
  - host: kc-db.mipllab.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phpmyadmin
              port:
                number: 8080
